--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ body {
 @media (max-width: 37.5em) {
   .heading-secondary {
     font-size: 2.5rem;
+    letter-spacing: 0.1rem;
   }
 }
 .heading-secondary:hover {
@@ -586,6 +587,32 @@ body {
   font-weight: 100;
 }
 
+/*
+		Screen Range		:		Breakpoints		:		Description
+		0 - 600px 					phone							Phone screen
+		600 - 900px					tabPort						Tablet Portrait screen
+		900 - 1200px				tabLand						Tablet Landscape screen
+		1200 - 1800px													Desktop screen where our styles apply
+		1800 - +						bigDesktop				Big Desktop screen
+
+		IMPORTANT ABOUT MEDIA QUERY UNITS
+		- always use a relative unit based on the default Browser font-size
+		- for better performance in media queries use always em units
+		- 1em === the default Browser font-size === 16px
+		- how to calculate the unit for each breakpoint?
+			600 px 	=== 600 / 16 	=== 37.5em
+			900 px 	=== 900 / 16 	=== 56.25em
+			1200 px === 1200 / 16 === 75em
+			1800 px === 1800 / 16 === 112.5em
+		- each em unit will be calculated by the Browser to px and will be adapted to the font-size
+			that the user setup on the browser
+
+		ORDER OF RESPONSIVE IMPLEMENTATION BY SASS FOLDERS
+		1. base folder : _base _typography
+		3. layout folder : _grid _header _footer _nav
+		3. pages folder
+		4. components folder
+ */
 .composition {
   position: relative;
 }
@@ -598,6 +625,14 @@ body {
   z-index: 10;
   outline-offset: 2rem;
 }
+@media (max-width: 56.25em) {
+  .composition__photo {
+    width: 33.333333%;
+    float: left;
+    position: relative;
+    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+  }
+}
 .composition__photo:hover {
   outline: 1.5rem solid #55c57a;
   transform: scale(1.05) translateY(-0.5rem);
@@ -608,18 +643,65 @@ body {
   left: 0;
   top: -2rem;
 }
+@media (max-width: 56.25em) {
+  .composition__photo--p1 {
+    top: -1rem;
+    left: 3rem;
+    transform: scale(1.3);
+  }
+}
 .composition__photo--p2 {
   right: 0;
   top: 2rem;
 }
+@media (max-width: 56.25em) {
+  .composition__photo--p2 {
+    top: 8rem;
+    z-index: 100;
+    transform: scale(1.3);
+  }
+}
 .composition__photo--p3 {
-  left: 20%;
   top: 10rem;
+  left: 20%;
+}
+@media (max-width: 56.25em) {
+  .composition__photo--p3 {
+    left: -3rem;
+    top: 1rem;
+    transform: scale(1.3);
+  }
 }
 .composition:hover .composition__photo:not(:hover) {
   transform: scale(0.95);
 }
 
+/*
+		Screen Range		:		Breakpoints		:		Description
+		0 - 600px 					phone							Phone screen
+		600 - 900px					tabPort						Tablet Portrait screen
+		900 - 1200px				tabLand						Tablet Landscape screen
+		1200 - 1800px													Desktop screen where our styles apply
+		1800 - +						bigDesktop				Big Desktop screen
+
+		IMPORTANT ABOUT MEDIA QUERY UNITS
+		- always use a relative unit based on the default Browser font-size
+		- for better performance in media queries use always em units
+		- 1em === the default Browser font-size === 16px
+		- how to calculate the unit for each breakpoint?
+			600 px 	=== 600 / 16 	=== 37.5em
+			900 px 	=== 900 / 16 	=== 56.25em
+			1200 px === 1200 / 16 === 75em
+			1800 px === 1800 / 16 === 112.5em
+		- each em unit will be calculated by the Browser to px and will be adapted to the font-size
+			that the user setup on the browser
+
+		ORDER OF RESPONSIVE IMPLEMENTATION BY SASS FOLDERS
+		1. base folder : _base _typography
+		3. layout folder : _grid _header _footer _nav
+		3. pages folder
+		4. components folder
+ */
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
@@ -628,6 +710,11 @@ body {
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
+}
+@media (max-width: 56.25em) {
+  .feature-box {
+    padding: 2rem;
+  }
 }
 .feature-box:hover {
   transform: translateY(-1.5rem) scale(1.03);
@@ -639,6 +726,11 @@ body {
   display: inline-block;
   -webkit-background-clip: text;
   color: transparent;
+}
+@media (max-width: 56.25em) {
+  .feature-box__icon {
+    margin-bottom: 0;
+  }
 }
 
 .form__group:not(:last-child) {
@@ -976,7 +1068,7 @@ body {
 @media (max-width: 56.25em) {
   [class^=col-]:not(:last-child) {
     margin-right: 0;
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
   }
 }
 @media (max-width: 56.25em) {
@@ -1000,7 +1092,7 @@ body {
 }
 @media (max-width: 56.25em) {
   .row:not(:last-child) {
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
   }
 }
 .row::after {
@@ -1062,16 +1154,17 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
   clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
 }
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .header {
-    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 83vh, 0% 100%);
-    clip-path: polygon(0 0, 100% 0%, 100% 83vh, 0% 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 81vh, 0% 100%);
+    clip-path: polygon(0 0, 100% 0%, 100% 81vh, 0% 100%);
   }
 }
-@media (max-width: 37.5em) {
+@media (max-width: 56.25em) {
   .header {
-    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 87vh, 0% 100%);
-    clip-path: polygon(0 0, 100% 0%, 100% 87vh, 0% 100%);
+    height: 75vh;
+    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 68vh, 0% 100%);
+    clip-path: polygon(0 0, 100% 0%, 100% 68vh, 0% 100%);
   }
 }
 .header__logo-box {
@@ -1277,9 +1370,16 @@ body {
   padding: 25rem 0;
   margin-top: -20vh;
 }
-@media (max-width: 56.25em) {
+@media (max-width: 75em) {
   .section-about {
-    padding: 20rem 0;
+    margin-top: -15vh;
+    margin-bottom: 5rem;
+  }
+}
+@media (max-width: 37.5em) {
+  .section-about {
+    margin-top: -12vh;
+    padding: 20rem 1.3rem 25rem 1.3rem;
   }
 }
 
@@ -1292,7 +1392,7 @@ body {
 }
 @media (max-width: 56.25em) {
   .section-features {
-    padding: 15rem 0;
+    padding: 10rem 0;
   }
 }
 .section-features > * {
@@ -1335,7 +1435,6 @@ body {
   background-size: cover;
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 6rem rgba(0, 0, 0, 0.2);
-  height: 50rem;
 }
 .book__form {
   width: 50%;
