--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,3 +1,4 @@
+@import "../abstracts/mixins";
 @import "../abstracts/variables";
 
 .composition {
@@ -12,6 +13,15 @@
 		z-index: 10;
 		outline-offset: 2rem;
 
+		// making the pictures float site by site we
+		// need them to float left and change position to relative
+		@include responsive(tabPort) {
+			width: 33.333333%;
+			float: left;
+			position: relative;
+			box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+		}
+
 		&:hover {
 			outline: 1.5rem solid $color-primary;
 			transform: scale(1.05) translateY(-.5rem);
@@ -19,21 +29,37 @@
 			z-index: 20;
 		}
 
-
-
 		&--p1 {
 			left: 0;
 			top: -2rem;
+
+			@include responsive(tabPort) {
+				top: -1rem;
+				left: 3rem;
+				transform: scale(1.3);
+			}
 		}
 
 		&--p2 {
 			right: 0;
 			top: 2rem;
+
+			@include responsive(tabPort) {
+				top: 8rem;
+				z-index: 100;
+				transform: scale(1.3);
+			}
 		}
 
 		&--p3 {
-			left: 20%;
 			top: 10rem;
+			left: 20%;
+
+			@include responsive(tabPort) {
+				left: -3rem;
+				top: 1rem;
+				transform: scale(1.3);
+			}
 		}
 	}
 
