--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,3 +1,4 @@
+@import "../abstracts/mixins";
 @import "../abstracts/variables";
 
 .feature-box {
@@ -8,6 +9,10 @@
 	border-radius: .3rem;
 	box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 	transition: transform .3s;
+
+	@include responsive(tabPort) {
+		padding: 2rem;
+	}
 
 	&:hover {
 		transform: translateY(-1.5rem) scale(1.03);
@@ -23,5 +28,9 @@
 		display: inline-block;
 		-webkit-background-clip: text;
 		color: transparent;
+
+		@include responsive(tabPort) {
+			margin-bottom: 0;
+		}
 	}
 }
