--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,21 @@
 									to right,
 									rgba($color-primary-light, 0.8),
 									rgba($color-primary-dark, 0.8)),
-	url(#{$asset-path}/hero.jpg);
+	url(#{$asset-path}/hero-small.jpg);
+
+	// implementation example of Responsive Images in CSS
+	// using media query condition to display the correct img
+	// based on device resolution and device screen
+	@media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+				 only screen and (-webkit-device-pixel-ratio: 2) and (min-width: 37.5em), // for Safari Browser
+				 only screen and (min-width: 112.5em) {
+		background-image: linear-gradient(
+										to right,
+										rgba($color-primary-light, 0.8),
+										rgba($color-primary-dark, 0.8)),
+		url(#{$asset-path}/hero.jpg);
+	}
+
 	background-size: cover;
 	background-position: top;
 	position: relative;
