--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -54,7 +54,7 @@
 	position: relative;
 
 	@include responsive(tabPort) {
-		padding: 10rem 0;
+		padding: 7rem 0 3rem 0;
 	}
 }
 
@@ -84,8 +84,20 @@
 	border-radius: .3rem;
 	box-shadow: 0 1.5rem 6rem rgba($color-black, .2);
 
+	@include responsive(tabPort) {
+		background-image: linear-gradient(
+										to right,
+										rgba($color-white, 0.9) 0%,
+										rgba($color-white, 0.9) 100%
+		), url(#{$asset-path}/nat-10.jpg);
+	}
+
 	&__form {
 		width: 50%;
 		padding: 6rem;
+
+		@include responsive(tabPort) {
+			width: 100%;
+		}
 	}
 }
