--- a/css/style.css
+++ b/css/style.css
@@ -137,22 +137,22 @@ html {
   		6px / 16px = 0.375
   */
 }
-@media (min-width: 112.5em) {
+@media only screen and (min-width: 112.5em) {
   html {
     font-size: 75%;
   }
 }
-@media (max-width: 75em) {
+@media only screen and (max-width: 75em) {
   html {
     font-size: 56.25%;
   }
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   html {
     font-size: 50%;
   }
 }
-@media (max-width: 37.5em) {
+@media only screen and (max-width: 37.5em) {
   html {
     font-size: 37.5%;
   }
@@ -162,10 +162,15 @@ body {
   padding: 3rem;
   box-sizing: border-box;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   body {
     padding: 0;
   }
+}
+
+::selection {
+  background-color: #55c57a;
+  color: #fff;
 }
 
 /*
@@ -226,7 +231,7 @@ body {
     animation-iteration-count: 3;
   */
 }
-@media (max-width: 37.5em) {
+@media only screen and (max-width: 37.5em) {
   .heading-primary--main {
     font-size: 5rem;
     letter-spacing: 1rem;
@@ -239,7 +244,7 @@ body {
   letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-out;
 }
-@media (max-width: 37.5em) {
+@media only screen and (max-width: 37.5em) {
   .heading-primary--sub {
     letter-spacing: 0.5rem;
   }
@@ -256,12 +261,12 @@ body {
   letter-spacing: 0.2rem;
   transition: all 0.2s;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .heading-secondary {
     font-size: 3rem;
   }
 }
-@media (max-width: 37.5em) {
+@media only screen and (max-width: 37.5em) {
   .heading-secondary {
     font-size: 2.5rem;
     letter-spacing: 0.1rem;
@@ -334,7 +339,7 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .u-margin-bottom-small {
     margin-bottom: 1rem;
   }
@@ -343,7 +348,7 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .u-margin-bottom-medium {
     margin-bottom: 2rem;
   }
@@ -352,7 +357,7 @@ body {
 .u-margin-bottom-large {
   margin-bottom: 8rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .u-margin-bottom-large {
     margin-bottom: 5rem;
   }
@@ -361,7 +366,7 @@ body {
 .u-margin-bottom-x-large {
   margin-bottom: 10rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .u-margin-bottom-x-large {
     margin-bottom: 6rem;
   }
@@ -469,6 +474,32 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
+/*
+		Screen Range		:		Breakpoints		:		Description
+		0 - 600px 					phone							Phone screen
+		600 - 900px					tabPort						Tablet Portrait screen
+		900 - 1200px				tabLand						Tablet Landscape screen
+		1200 - 1800px													Desktop screen where our styles apply
+		1800 - +						bigDesktop				Big Desktop screen
+
+		IMPORTANT ABOUT MEDIA QUERY UNITS
+		- always use a relative unit based on the default Browser font-size
+		- for better performance in media queries use always em units
+		- 1em === the default Browser font-size === 16px
+		- how to calculate the unit for each breakpoint?
+			600 px 	=== 600 / 16 	=== 37.5em
+			900 px 	=== 900 / 16 	=== 56.25em
+			1200 px === 1200 / 16 === 75em
+			1800 px === 1800 / 16 === 112.5em
+		- each em unit will be calculated by the Browser to px and will be adapted to the font-size
+			that the user setup on the browser
+
+		ORDER OF RESPONSIVE IMPLEMENTATION BY SASS FOLDERS
+		1. base folder : _base _typography
+		3. layout folder : _grid _header _footer _nav
+		3. pages folder
+		4. components folder
+ */
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
@@ -481,6 +512,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   border-radius: 0.3rem;
   overflow: hidden;
@@ -586,6 +618,45 @@ body {
   font-size: 6rem;
   font-weight: 100;
 }
+@media only screen and (max-width: 56.25em), only screen and (hover: none) {
+  .card {
+    height: auto;
+    border-radius: 0.3rem;
+    background-color: #fff;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  }
+  .card:hover .card__side--front {
+    transform: rotateY(0);
+  }
+  .card__details {
+    padding: 0 2rem;
+  }
+  .card__side {
+    height: auto;
+    width: 100%;
+    position: relative;
+    box-shadow: none;
+  }
+  .card__side--back {
+    transform: rotateY(0);
+    -webkit-clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0 15%, 100% 0%, 100% 100%, 0% 100%);
+  }
+  .card__cta {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: translate(0);
+    padding: 6rem 4rem 4rem 4rem;
+  }
+  .card__price-box {
+    margin-bottom: 3rem;
+  }
+  .card__price-value {
+    font-size: 4.5rem;
+  }
+}
 
 /*
 		Screen Range		:		Breakpoints		:		Description
@@ -625,7 +696,7 @@ body {
   z-index: 10;
   outline-offset: 2rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .composition__photo {
     width: 33.333333%;
     float: left;
@@ -643,7 +714,7 @@ body {
   left: 0;
   top: -2rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .composition__photo--p1 {
     top: -1rem;
     left: 3rem;
@@ -654,7 +725,7 @@ body {
   right: 0;
   top: 2rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .composition__photo--p2 {
     top: 8rem;
     z-index: 100;
@@ -665,7 +736,7 @@ body {
   top: 10rem;
   left: 20%;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .composition__photo--p3 {
     left: -3rem;
     top: 1rem;
@@ -711,7 +782,7 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .feature-box {
     padding: 2rem;
   }
@@ -727,12 +798,38 @@ body {
   -webkit-background-clip: text;
   color: transparent;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .feature-box__icon {
     margin-bottom: 0;
   }
 }
 
+/*
+		Screen Range		:		Breakpoints		:		Description
+		0 - 600px 					phone							Phone screen
+		600 - 900px					tabPort						Tablet Portrait screen
+		900 - 1200px				tabLand						Tablet Landscape screen
+		1200 - 1800px													Desktop screen where our styles apply
+		1800 - +						bigDesktop				Big Desktop screen
+
+		IMPORTANT ABOUT MEDIA QUERY UNITS
+		- always use a relative unit based on the default Browser font-size
+		- for better performance in media queries use always em units
+		- 1em === the default Browser font-size === 16px
+		- how to calculate the unit for each breakpoint?
+			600 px 	=== 600 / 16 	=== 37.5em
+			900 px 	=== 900 / 16 	=== 56.25em
+			1200 px === 1200 / 16 === 75em
+			1800 px === 1800 / 16 === 112.5em
+		- each em unit will be calculated by the Browser to px and will be adapted to the font-size
+			that the user setup on the browser
+
+		ORDER OF RESPONSIVE IMPLEMENTATION BY SASS FOLDERS
+		1. base folder : _base _typography
+		3. layout folder : _grid _header _footer _nav
+		3. pages folder
+		4. components folder
+ */
 .form__group:not(:last-child) {
   margin-bottom: 2rem;
 }
@@ -785,6 +882,11 @@ body {
   position: relative;
   padding-left: 4rem;
 }
+@media only screen and (max-width: 37.5em) {
+  .form__radio-label {
+    font-size: 1.3rem;
+  }
+}
 .form__radio-button {
   height: 3rem;
   width: 3rem;
@@ -813,6 +915,32 @@ body {
   opacity: 1;
 }
 
+/*
+		Screen Range		:		Breakpoints		:		Description
+		0 - 600px 					phone							Phone screen
+		600 - 900px					tabPort						Tablet Portrait screen
+		900 - 1200px				tabLand						Tablet Landscape screen
+		1200 - 1800px													Desktop screen where our styles apply
+		1800 - +						bigDesktop				Big Desktop screen
+
+		IMPORTANT ABOUT MEDIA QUERY UNITS
+		- always use a relative unit based on the default Browser font-size
+		- for better performance in media queries use always em units
+		- 1em === the default Browser font-size === 16px
+		- how to calculate the unit for each breakpoint?
+			600 px 	=== 600 / 16 	=== 37.5em
+			900 px 	=== 900 / 16 	=== 56.25em
+			1200 px === 1200 / 16 === 75em
+			1800 px === 1800 / 16 === 112.5em
+		- each em unit will be calculated by the Browser to px and will be adapted to the font-size
+			that the user setup on the browser
+
+		ORDER OF RESPONSIVE IMPLEMENTATION BY SASS FOLDERS
+		1. base folder : _base _typography
+		3. layout folder : _grid _header _footer _nav
+		3. pages folder
+		4. components folder
+ */
 .popup {
   height: 100vh;
   width: 100%;
@@ -820,10 +948,17 @@ body {
   top: 0;
   left: 0;
   z-index: 3000;
-  background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+@supports (-webkit-backdrop-filter: blur(1rem)) or (backdrop-filter: blur(1rem)) {
+  .popup {
+    background-color: rgba(0, 0, 0, 0.3);
+    -webkit-backdrop-filter: blur(1rem);
+    backdrop-filter: blur(1rem);
+  }
 }
 .popup__content {
   width: 75%;
@@ -839,15 +974,41 @@ body {
   display: table;
   transition: all 0.5s 0.2s;
 }
+@media only screen and (max-width: 75em) {
+  .popup__content {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .popup__content {
+    width: 70%;
+  }
+}
 .popup__left {
-  width: 33.333333%;
+  width: 35.333333%;
   display: table-cell;
 }
+@media only screen and (max-width: 75em) {
+  .popup__left {
+    width: 47.333333%;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .popup__left {
+    display: none;
+  }
+}
 .popup__right {
-  width: 66.666667%;
+  width: 64.666667%;
+  height: auto;
   display: table-cell;
   vertical-align: middle;
   padding: 3rem 5rem;
+}
+@media only screen and (max-width: 75em) {
+  .popup__right {
+    width: 52.666667%;
+  }
 }
 .popup__img {
   display: block;
@@ -868,6 +1029,13 @@ body {
   -ms-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
+}
+@media only screen and (max-width: 75em) {
+  .popup__text {
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
 }
 .popup:target {
   opacity: 1;
@@ -891,6 +1059,32 @@ body {
   color: #55c57a;
 }
 
+/*
+		Screen Range		:		Breakpoints		:		Description
+		0 - 600px 					phone							Phone screen
+		600 - 900px					tabPort						Tablet Portrait screen
+		900 - 1200px				tabLand						Tablet Landscape screen
+		1200 - 1800px													Desktop screen where our styles apply
+		1800 - +						bigDesktop				Big Desktop screen
+
+		IMPORTANT ABOUT MEDIA QUERY UNITS
+		- always use a relative unit based on the default Browser font-size
+		- for better performance in media queries use always em units
+		- 1em === the default Browser font-size === 16px
+		- how to calculate the unit for each breakpoint?
+			600 px 	=== 600 / 16 	=== 37.5em
+			900 px 	=== 900 / 16 	=== 56.25em
+			1200 px === 1200 / 16 === 75em
+			1800 px === 1800 / 16 === 112.5em
+		- each em unit will be calculated by the Browser to px and will be adapted to the font-size
+			that the user setup on the browser
+
+		ORDER OF RESPONSIVE IMPLEMENTATION BY SASS FOLDERS
+		1. base folder : _base _typography
+		3. layout folder : _grid _header _footer _nav
+		3. pages folder
+		4. components folder
+ */
 .story {
   width: 75%;
   margin: 0 auto;
@@ -900,6 +1094,17 @@ body {
   padding: 6rem 6rem 6rem 9rem;
   font-size: 1.6rem;
   transform: skewX(-12deg);
+}
+@media only screen and (max-width: 56.25em) {
+  .story {
+    width: 100%;
+    padding: 4rem 4rem 4rem 7rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .story {
+    transform: skewX(0);
+  }
 }
 .story__shape {
   width: 15rem;
@@ -911,6 +1116,11 @@ body {
   -webkit-clip-path: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
   transform: translateX(-3rem) skewX(12deg);
+}
+@media only screen and (max-width: 37.5em) {
+  .story__shape {
+    transform: translateX(-3rem) skewX(0);
+  }
 }
 .story__img {
   height: 100%;
@@ -932,6 +1142,11 @@ body {
 }
 .story__text {
   transform: skewX(12deg);
+}
+@media only screen and (max-width: 37.5em) {
+  .story__text {
+    transform: skewX(0);
+  }
 }
 .story:hover .story__caption {
   transform: translate(-50%, -50%);
@@ -978,7 +1193,7 @@ body {
   text-align: center;
   margin-bottom: 8rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .footer__logo-box {
     margin-bottom: 6rem;
   }
@@ -992,7 +1207,7 @@ body {
   padding-top: 2rem;
   display: inline-block;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .footer__navigation {
     display: block;
     text-align: center;
@@ -1026,7 +1241,7 @@ body {
   width: 80%;
   float: right;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .footer__copyright {
     width: 100%;
     float: none;
@@ -1065,13 +1280,13 @@ body {
 [class^=col-]:not(:last-child) {
   margin-right: 6rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   [class^=col-]:not(:last-child) {
     margin-right: 0;
     margin-bottom: 3rem;
   }
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   [class^=col-] {
     width: 100% !important;
   }
@@ -1081,7 +1296,7 @@ body {
   max-width: 114rem;
   margin: 0 auto;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .row {
     max-width: 60rem;
     padding: 0 3rem;
@@ -1090,7 +1305,7 @@ body {
 .row:not(:last-child) {
   margin-bottom: 8rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .row:not(:last-child) {
     margin-bottom: 3rem;
   }
@@ -1147,20 +1362,25 @@ body {
  */
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
   clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
 }
-@media (max-width: 75em) {
+@media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 112.5em) {
+  .header {
+    background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  }
+}
+@media only screen and (max-width: 75em) {
   .header {
     -webkit-clip-path: polygon(0 0, 100% 0%, 100% 81vh, 0% 100%);
     clip-path: polygon(0 0, 100% 0%, 100% 81vh, 0% 100%);
   }
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .header {
     height: 75vh;
     -webkit-clip-path: polygon(0 0, 100% 0%, 100% 68vh, 0% 100%);
@@ -1224,7 +1444,7 @@ body {
   z-index: 2000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .nav__button {
     top: 3rem;
     right: 3rem;
@@ -1288,7 +1508,7 @@ body {
   z-index: 1000;
   transition: transform 0.6s cubic-bezier(0.83, 0, 0.17, 1);
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .nav__background {
     top: 3.5rem;
     right: 3.5rem;
@@ -1311,6 +1531,11 @@ body {
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
+}
+@media only screen and (max-width: 37.5em) {
+  .nav__list {
+    position: relative;
+  }
 }
 .nav__item {
   margin: 1rem;
@@ -1370,13 +1595,13 @@ body {
   padding: 25rem 0;
   margin-top: -20vh;
 }
-@media (max-width: 75em) {
+@media only screen and (max-width: 75em) {
   .section-about {
     margin-top: -15vh;
     margin-bottom: 5rem;
   }
 }
-@media (max-width: 37.5em) {
+@media only screen and (max-width: 37.5em) {
   .section-about {
     margin-top: -12vh;
     padding: 20rem 1.3rem 25rem 1.3rem;
@@ -1390,7 +1615,7 @@ body {
   transform: skewY(-7deg);
   margin-top: -11rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .section-features {
     padding: 10rem 0;
   }
@@ -1404,7 +1629,7 @@ body {
   padding: 25rem 0 15rem 0;
   margin-top: -11rem;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .section-tours {
     padding: 20rem 0 10rem 0;
   }
@@ -1414,9 +1639,9 @@ body {
   padding: 15rem 0;
   position: relative;
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .section-stories {
-    padding: 10rem 0;
+    padding: 7rem 0 3rem 0;
   }
 }
 
@@ -1424,7 +1649,7 @@ body {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
 }
-@media (max-width: 56.25em) {
+@media only screen and (max-width: 56.25em) {
   .section-book {
     padding: 10rem 0;
   }
@@ -1436,9 +1661,19 @@ body {
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 6rem rgba(0, 0, 0, 0.2);
 }
+@media only screen and (max-width: 56.25em) {
+  .book {
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg);
+  }
+}
 .book__form {
   width: 50%;
   padding: 6rem;
+}
+@media only screen and (max-width: 56.25em) {
+  .book__form {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
