--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -28,16 +28,16 @@
 
 @mixin responsive($breakpoint) {
 	@if $breakpoint == phone {
-		@media (max-width: 37.5em) { @content }
+		@media only screen and (max-width: 37.5em) { @content }
 	}
 	@if $breakpoint == tabPort {
-		@media (max-width: 56.25em) { @content }
+		@media only screen and (max-width: 56.25em) { @content }
 	}
 	@if $breakpoint == tabLand {
-		@media (max-width: 75em) { @content }
+		@media only screen and (max-width: 75em) { @content }
 	}
 	@if $breakpoint == bigDesktop {
-		@media (min-width: 112.5em) { @content }
+		@media only screen and (min-width: 112.5em) { @content }
 	}
 }
 
