--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,5 @@
 @import "../abstracts/mixins";
+@import "../abstracts/variables";
 
 *,
 *::after,
@@ -76,5 +77,10 @@ body {
 	@include responsive(tabPort) {
 		padding: 0;
 	}
+}
 
+// changing the style of selecting text
+::selection {
+	background-color: $color-primary;
+	color: $color-white;
 }
