--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,3 +1,4 @@
+@import "../abstracts/mixins";
 @import "../abstracts/variables";
 
 .story {
@@ -9,6 +10,15 @@
 	padding: 6rem 6rem 6rem 9rem;
 	font-size: $default-font-size;
 	transform: skewX(-12deg);
+
+	@include responsive(tabPort) {
+		width: 100%;
+		padding: 4rem 4rem 4rem 7rem;
+	}
+
+	@include responsive(phone) {
+		transform: skewX(0);
+	}
 
 	&__shape {
 		width: 15rem;
@@ -32,6 +42,10 @@
 		// using transform, this will create a padding between
 		// the shape and the text
 		transform: translateX(-3rem) skewX(12deg);
+
+		@include responsive(phone) {
+			transform: translateX(-3rem) skewX(0);
+		}
 	}
 
 	&__img {
@@ -57,6 +71,10 @@
 
 	&__text {
 		transform: skewX(12deg);
+
+		@include responsive(phone) {
+			transform: skewX(0);
+		}
 	}
 
 	&:hover &__caption {
